# coastwatch

./: .env.example  .gitignore  README.md  pyproject.toml
config/: beaches.yaml  settings.yaml
src/coastwatch/: __init__.py
src/coastwatch/analysis/: models.py  opencv_analyzer.py  person_detector.py  pipeline.py  vision_client.py  weather_client.py
src/coastwatch/capture/: grabber.py  scheduler.py
src/coastwatch/cli/: app.py
src/coastwatch/cli/commands/: beaches.py  best.py  capture.py  export.py  history.py  status.py  train.py
src/coastwatch/common/: exceptions.py  rate_limiter.py  solar.py
src/coastwatch/config/: loader.py  models.py
src/coastwatch/storage/: database.py  repository.py
