[project]
name = "coastwatch"
version = "0.2.0"
description = "BAYWATCH — Beach conditions monitoring CLI for the French Atlantic coast"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "astral>=3.2",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "ultralytics>=8.1.0",
]

[project.scripts]
baywatch = "coastwatch.cli.app:cli"
coastwatch = "coastwatch.cli.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coastwatch"]
